# ss-physics-sim

./: .gitignore  CMakeLists.txt  vcpkg.json
include/ssps/common/: arena.h
include/ssps/physics/: simulation.h  vec3.h
include/ssps/rendering/: raylib_renderer.h
src/: main.c
src/physics/: simulation.c  vec3.c
src/rendering/: raylib_renderer.c
